mobile lk update

--- a/css/style.css
+++ b/css/style.css
@@ -2268,6 +2268,9 @@ div.checker,div.radio{position:relative}div.checker,div.checker input,div.checke
 	font-weight:bold;
 	padding:23px 15px 22px;
 }
+.lk__data--cell span {
+	display:none;
+}
 .lk__data--cell br,
 .lk__data--cell hr {
 	display:none;
@@ -3093,7 +3096,7 @@ div.checker,div.radio{position:relative}div.checker,div.checker input,div.checke
 		padding:21px 30px 24px;
 	}
 	.lk__data--cell {
-		height:59px;
+		height:auto;
 		font-size:20px;
 		line-height:24px;
 		padding-top:18px;
@@ -3112,6 +3115,11 @@ div.checker,div.radio{position:relative}div.checker,div.checker input,div.checke
 	.lk__data--value input.sm[type="text"] {
 		width:122px;
 		margin:-10px 0 -11px;
+	}
+	.lk__data--value {
+		clear:both;
+		overflow:hidden;
+		margin:0 0 3px;
 	}
 	.lk__data--from {
 		width:34px;
@@ -3983,12 +3991,25 @@ div.checker,div.radio{position:relative}div.checker,div.checker input,div.checke
 		font-weight:bold;
 		padding:8px 10px 10px;
 	}
+	.lk__data--header {
+		display:none;
+	}
+	.lk__data--item {
+		padding:5px 0;
+	}
 	.lk__data--cell {
+		display:block;
 		height:auto;
+		width:auto;
 		font-size:12px;
 		line-height:17px;
+		text-align:left;
 		vertical-align:middle;
-		padding:11px 5px;
+		padding:5px 10px;
+	}
+	.lk__data--cell span {
+		display:block;
+		font-weight:normal;
 	}
 	.lk__data--cell:first-child {
 		padding-left:10px;
@@ -4004,7 +4025,7 @@ div.checker,div.radio{position:relative}div.checker,div.checker input,div.checke
 	.lk__data--value input[type="text"] {
 		font-size:14px;
 		padding:4px;
-		margin:-4px 0 -3px;
+		margin:-4px 0 0;
 	}
 	.lk__data {
 		margin:0 0 20px;
@@ -4055,15 +4076,6 @@ div.checker,div.radio{position:relative}div.checker,div.checker input,div.checke
 		width:25px;
 		text-align:left;
 		padding:0;
-	}
-	.lk__data--row {
-		overflow-x:auto;
-	}
-	.lk__data--row::-webkit-scrollbar {
-		display:none; 
-	}
-	.lk__data--row .lk__data--item {
-		width:480px;
 	}
 	.form__complete {
 		padding:38px 75px 0 55px;
