--- a/css/style.css
+++ b/css/style.css
@@ -1355,6 +1355,18 @@ div.checker,div.radio{position:relative}div.checker,div.checker input,div.checke
 	visibility:visible;
 	opacity:1;
 }
+body.is-locked {
+	overflow:hidden;
+}
+.modal-container {
+	overflow-y:auto;
+	position:fixed;
+	left:0;
+	top:0;
+	z-index:1010;
+	width:100%;
+	height:100%;
+}
 .modal {
 	visibility:hidden;
 	opacity:0;
